# xilem_material_icons

./: Cargo.toml  NOTICE  README.md
examples/: gallery.rs
src/: lib.rs
